fixed bugs with overflow -Johnson

--- a/src/styles/Calculator.css
+++ b/src/styles/Calculator.css
@@ -39,9 +39,9 @@ button:hover
 	padding: 0.5rem;
 	background-color: rgba(0, 0, 0, 0.9);
 }
-#display
+#output
 {
-	font-family: Digital, segoe UI, sans-serif;
+	font-family: "Share Tech Mono", segoe UI, sans-serif;/*Digital, segoe UI, sans-serif;*/
 	font-size: 3.5rem;
 	padding: 0.5rem;
 	grid-area: display;
@@ -49,15 +49,16 @@ button:hover
 	color: white;
 	text-align: right;
 }
-#display #expression
+#output #expression
 {
-	overflow-x: auto;
 	color: rgb(255, 170, 0);
 	font-size: 1.7rem;
+	height: 2rem;
 }
-#display #result
+#output #display
 {
 	overflow-x: auto;
+	height: 5rem;
 }
 #calculator-buttons
 {
@@ -90,4 +91,18 @@ button:hover
 {
 	display: grid;
 	grid-template-columns: 2fr 1fr;
+}
+
+
+@media (max-width: 860px)
+{
+	h1#intro
+	{
+		font-size: 27px;
+	}
+	#calculator-body
+	{
+		margin: 1rem auto;
+		width: 90vw;
+	}
 }
